--- a/CMSExample/src/main/webapp/css/default.css
+++ b/CMSExample/src/main/webapp/css/default.css
@@ -219,49 +219,37 @@ footer a {
 	box-shadow: 3px 3px 3px #666;
 }
 
-#admin_panel,#setup_panel {
+#admin_panel {
 	border-style: none;
 	box-shadow: 0 0 0;
 	padding: 16px;
 }
 
-#admin_panel ul,#setup_panel ul {
-	display: inline;
+#admin_panel ul {
+	margin: 0px;
+	padding: 0px;
 }
 
 #admin_panel li,#setup_panel li {
-	display: inline;
+	display: inline-block;
 	text-align: center;
-	float: left;
 	padding: 4px;
 	margin: 8px;
 }
 
-#admin_panel li h1,#setup_panel li h1 {
-	margin: 0px;
-	padding: 0px;
-	font-size: 1.0em;
-	font-weight: normal;
+#admin_panel li span {
+	display: block;
 }
 
-#admin_panel li:hover,#setup_panel li:hover {
+#admin_panel li:hover {
 	border: 1px solid black;
 	border-radius: 5px 5px 5px 5px;
 	box-shadow: 0px 0px 6px #666;
 }
 
-#admin_panel li:hover a,#setup_panel li:hover a {
+#admin_panel li:hover a {
 	color: #dd7744;
 }
-
-/* #fork_me { */
-/* 	border: none; */
-/* 	position: fixed;  */
-/* 	top: 45%;  */
-/* 	left: 0;  */
-/* 	border-radius: 0px 8px 8px 0px; */
-/* 	box-shadow: 3px 3px 3px #666; */
-/* } */
 
 #messages {
 	padding: 1em 1em 1em 2em;
@@ -271,9 +259,9 @@ footer a {
 	left: 0;
 	width: 100%;
 	
-/* 	border: 1px solid #efefef; */
-/* 	background-color: #999999; */
-/* 	box-shadow: 0px 0px 15px #666; */
+	border: 1px solid #efefef;
+	background-color: #cccccc;
+	box-shadow: 0px 0px 15px #666;
 }
 
 #messages ul {
