--- a/CMSExample/src/main/webapp/css/default.css
+++ b/CMSExample/src/main/webapp/css/default.css
@@ -386,6 +386,15 @@ article img {
 	display: inline;
 }
 
+[data-lift-id="content"] img {
+	float: left;
+	margin: 8px;
+}
+
 article img:after {
 	clear: both;
+}
+
+.draggable {
+	cursor: move;
 }
